--- a/RESULTS/page_sources/STEP_8_source.html
+++ b/RESULTS/page_sources/STEP_8_source.html
@@ -1137,7 +1137,7 @@
                         </li>
                     </ul>
 					<ul id="menu" class="listPop" style="width:auto;">  <!--Fix for 28682961-->
-                        <li id="sesTime" tabindex="0" onmouseover="showMenu(this, true, event)" onmouseout="hideMenu(this, true, false, event)" onkeydown="return handleKeys(this, true, event);hideMenu(this, true, true, event);" title="Session Time :">00:00:11</li>
+                        <li id="sesTime" tabindex="0" onmouseover="showMenu(this, true, event)" onmouseout="hideMenu(this, true, false, event)" onkeydown="return handleKeys(this, true, event);hideMenu(this, true, true, event);" title="Session Time :">00:00:45</li>
                         <!--timeZone changes by Shishir Start-->
                         <li id="datel1" tabindex="0" onmouseover="showMenu(this, true, event)" onmouseout="hideMenu(this, true, false, event)" onkeydown="return handleKeys(this, true, event);hideMenu(this, true, true, event);" %="">Africa/Maseru</li>
                         <!--timeZone changes by Shishir End-->
@@ -1393,9 +1393,9 @@
         </div>
         <div id="debugWindowDIV" style="width:1px ;height:0px;">
         </div>    
-        <div id="masker" class="masker" style="display: block; height: 0px; width: 0px;" tabindex="-1">
-            <div id="Div_AlertWin" class="showPopUp" onclose="fnCloseAlertWin(event)" oncancel="fnExitAlertWin(event)" style="position: absolute; display: none; left: 178px; top: 240px;"><!--HTML5 Changes-->
-                <iframe id="ifr_AlertWin" class="frames" src="" allowtransparency="yes" frameborder="0" scrolling="no" title="Information Message" height="0" width="0" style="height: 244px; width: 562px;"></iframe>
+        <div id="masker" class="masker" style="display: block; height: 714px; width: 905px;" tabindex="-1">
+            <div id="Div_AlertWin" class="showPopUp" onclose="fnCloseAlertWin(event)" oncancel="fnExitAlertWin(event)" style="position: absolute; display: block; left: 178px; top: 240px;"><!--HTML5 Changes-->
+                <iframe id="ifr_AlertWin" class="frames" src="Alert.jsp?MSG_TYPE=C&amp;MESSAGE=&amp;THEME=Flexblue.css&amp;OVDSCRTYP=M&amp;OVDROUTINGTYP=NX&amp;ENTITY=ENTITY_ID1" allowtransparency="yes" frameborder="0" scrolling="no" title="Information Message" height="0" width="0" style="height: 244px; width: 562px;"></iframe>
             </div>
             <div id="Div_ChildWin" style="width:100%; height:100%">
             </div>
